--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo" aria-hidden="true">◎</div>
         <div>
           <h1>participedia 라이브러리</h1>
-          <p class="sub">한국어 자료만으로 빠르게 검색·필터링</p>
+          <p class="sub">한국어 키워드로 빠르게 검색·필터링</p>
         </div>
       </div>
 
